# Nautilus

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .gitignore  package-lock.json  package.json  pkg.json  tsconfig.json
backend/src/: index.ts
backend/src/features/connections/: connection.model.ts  connection.repository.ts  connection.service.ts  index.ts
backend/src/types/: composerize.d.ts  node-rdpjs.d.ts
src/: App.tsx  assets.d.ts  index.css  main.tsx  tauri-bridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SplashScreen.tsx
src/components/connections/: ConnectionManager.tsx  ConnectionPane.tsx  ConnectionTabs.tsx
src/components/cron/: CronManager.tsx
src/components/dashboard/: Dashboard.tsx
src/components/docker/: DockerDashboard.tsx  NewDeployModal.tsx
src/components/files/: FileManager.tsx
src/components/modals/: ConfirmDialog.tsx  ConnectionModal.tsx  SnippetModal.tsx
src/components/processes/: ProcessManager.tsx
src/components/rdp/: RdpViewer.tsx
src/components/terminal/: SnippetSidebar.tsx  TerminalManager.tsx
src/context/: ConnectionContext.tsx  ThemeContext.tsx
src/hooks/: useTerminal.ts
src/i18n/: config.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  zh.json
src/layouts/: MainLayout.tsx
src/theme/: themeConfig.ts
src/utils/: constants.ts  index.ts
(+15 files in other folders)
