[package]
name = "nautilus"
version = "1.0.0"
description = "Server Manager application built with Tauri"
authors = ["NTI"]
license = "ISC"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nautilus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
